--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.datasource.username=root
 spring.datasource.password=1234
 
 
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
